#13 partial - Validations and setting up send_login task

--- a/src/app.yaml
+++ b/src/app.yaml
@@ -42,4 +42,9 @@ handlers:
   secure: always
   script: convention.app
 
+- url: /task.*
+  login: admin
+  secure: always
+  script: convention.app
+
 
