--- a/src/index.yaml
+++ b/src/index.yaml
@@ -19,6 +19,13 @@ indexes:
 - kind: Arc
   properties:
   - name: class
+  - name: destination
+  - name: creation
+    direction: desc
+
+- kind: Arc
+  properties:
+  - name: class
   - name: origin
   - name: creation
 
