--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.py[cod]
+*~
 
 # C extensions
 *.so
@@ -17,6 +18,7 @@ develop-eggs
 .installed.cfg
 lib
 lib64
+local
 
 # Installer logs
 pip-log.txt
