--- a/i18n/babel.cfg
+++ b/i18n/babel.cfg
@@ -1,5 +1,4 @@
-[jinja2: **/templates/**.html]
-[jinja2: **/templates/**.txt]
+[jinja2: **/templates/**]
 encoding = utf-8
 [python: **.py]
 [extractors]
